force-app/main/default/objects/Call_Bucket__c/Call_Bucket__c.object-meta.xml
<CustomObject>
    <label>Call Bucket</label>
    <nameField>
        <label>Call Bucket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>