force-app/main/default/objects/Call_Bucket__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call Buckets</relationshipLabel>
    <relationshipName>Call_Buckets</relationshipName>
    <type>Lookup</type>
</CustomField>