force-app/main/default/objects/Call_Bucket__c/fields/Current_Agent__c.field-meta.xml
<CustomField>
    <fullName>Current_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Buckets</relationshipName>
    <type>Lookup</type>
</CustomField>