force-app/main/default/objects/Call_Bucket__c/fields/Is_Fresh__c.field-meta.xml
<CustomField>
    <fullName>Is_Fresh__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Fresh</label>
    <type>Checkbox</type>
</CustomField>